🌻😽 Checkpoint ./index.html:31664997/7814 ./style.css:31664997/118

--- a/index.html
+++ b/index.html
@@ -53,16 +53,46 @@
     </header>
 
     <section>
-      <div class="container mt-5">
+      <div class="container mt-5 mb-5">
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="..." />
+          <img
+            src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_diane-helentjaris-4mec6pzzam0-unsplash.jpg?v=1620583079835"
+            class="card-img-top"
+            alt="Persona amasando una masa en una mesa"
+          />
           <div class="card-body">
-            <h5 class="Las mejores personas ">Card title</h5>
+            <h5 class="card-tittle">Las mejores personas</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Tenemos los mejores responsables en hacer todas nuestras delicias.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        
+        <div class="card" style="width: 18rem;">
+          <img
+            src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_diane-helentjaris-4mec6pzzam0-unsplash.jpg?v=1620583079835"
+            class="card-img-top"
+            alt="Pastelitos dulces decoradas dentro de una cajita"
+          />
+          <div class="card-body">
+            <h5 class="card-tittle"> Pasteles</h5>
+            <p class="card-text">
+              En la pasteleria Ruth encontrarás mucha variedad de nuestros dulces clásicos en las cuales podras disfrutar con toda la comodidad.
+            </p>
+          </div>
+        </div>
+        
+        <div class="card" style="width: 18rem;">
+          <img
+            src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_diane-helentjaris-4mec6pzzam0-unsplash.jpg?v=1620583079835"
+            class="card-img-top"
+            alt="Dulces decorad"
+          />
+          <div class="card-body">
+            <h5 class="card-tittle"> Confiabilidad</h5>
+            <p class="card-text">
+              Nuestros clientes son lo más importantes para nosotros , por eso le damos la mayor atención y cariño que se merecen recibir
+            </p>
           </div>
         </div>
       </div>
