--- a/index.html
+++ b/index.html
@@ -54,45 +54,55 @@
 
     <section>
       <div class="container mt-5 mb-5">
-        <div class="card" style="width: 18rem;">
-          <img
-            src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_diane-helentjaris-4mec6pzzam0-unsplash.jpg?v=1620583079835"
-            class="card-img-top"
-            alt="Persona amasando una masa en una mesa"
-          />
-          <div class="card-body">
-            <h5 class="card-tittle">Las mejores personas</h5>
-            <p class="card-text">
-              Tenemos los mejores responsables en hacer todas nuestras delicias.
-            </p>
+        <div class="row">
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img
+                src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_diane-helentjaris-4mec6pzzam0-unsplash.jpg?v=1620583079835"
+                class="card-img-top"
+                alt="Persona amasando una masa en una mesa"
+              />
+              <div class="card-body">
+                <h5 class="card-tittle">Las mejores personas</h5>
+                <p class="card-text">
+                  Tenemos los mejores responsables en hacer todas nuestras
+                  delicias.
+                </p>
+              </div>
+            </div>
           </div>
-        </div>
-        
-        <div class="card" style="width: 18rem;">
-          <img
-            src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_diane-helentjaris-4mec6pzzam0-unsplash.jpg?v=1620583079835"
-            class="card-img-top"
-            alt="Pastelitos dulces decoradas dentro de una cajita"
-          />
-          <div class="card-body">
-            <h5 class="card-tittle"> Pasteles</h5>
-            <p class="card-text">
-              En la pasteleria Ruth encontrarás mucha variedad de nuestros dulces clásicos en las cuales podras disfrutar con toda la comodidad.
-            </p>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img
+                src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_mick-haupt-5qqqkchcsay-unsplash.jpg?v=1620586378527"
+                class="card-img-top"
+                alt="Pastelitos dulces decoradas dentro de una cajita"
+              />
+              <div class="card-body">
+                <h5 class="card-tittle">Pasteles</h5>
+                <p class="card-text">
+                  En la pasteleria Ruth encontrarás mucha variedad de nuestros
+                  dulces clásicos en las cuales podras disfrutar con toda la
+                  comodidad.
+                </p>
+              </div>
+            </div>
           </div>
-        </div>
-        
-        <div class="card" style="width: 18rem;">
-          <img
-            src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_diane-helentjaris-4mec6pzzam0-unsplash.jpg?v=1620583079835"
-            class="card-img-top"
-            alt="Dulces decorad"
-          />
-          <div class="card-body">
-            <h5 class="card-tittle"> Confiabilidad</h5>
-            <p class="card-text">
-              Nuestros clientes son lo más importantes para nosotros , por eso le damos la mayor atención y cariño que se merecen recibir
-            </p>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img
+                src="https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_nikola-duza-fiozpybobo8-unsplash.jpg?v=1620584101803 "
+                class="card-img-top"
+                alt="Dulces decoradas dentro de una vidriera"
+              />
+              <div class="card-body">
+                <h5 class="card-tittle">Confiabilidad</h5>
+                <p class="card-text">
+                  Nuestros clientes son lo más importantes para nosotros , por
+                  eso le damos la mayor atención y cariño que se merecen recibir
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
