🍰🎫 Checkpoint ./.glitch-assets:31664997/970 ./style.css:31664997/1213 ./index.html:31664997/105

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
     <section>
       <div class="container mt-5 mb-5">
-        <div class="row">
-          <div class="col">
-            <div class="card" style="width: 18rem;">
+        <div class="row justify-content-center">
+          <div class="col-12 col-sm">
+            <div class="card">
               <img
                 src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_diane-helentjaris-4mec6pzzam0-unsplash.jpg?v=1620583079835"
                 class="card-img-top"
@@ -71,8 +71,8 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
+          <div class="col-12">
+            <div class="card">
               <img
                 src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_mick-haupt-5qqqkchcsay-unsplash.jpg?v=1620586378527"
                 class="card-img-top"
@@ -88,8 +88,8 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
+          <div class="col-12">
+            <div class="card">
               <img
                 src=" https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_sera-izgqkxumrhc-unsplash.jpg?v=1620837782393"
                 class="card-img-top"
