🎪💿 Checkpoint ./.glitch-assets:31664997/469 ./style.css:31664997/1751 ./index.html:31664997/8557

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                 class="card-img-top"
                 alt="Pastelitos dulces decoradas dentro de una cajita"
               />
+               <div
+                class="cover cover-small"
+                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_sera-izgqkxumrhc-unsplash.jpg?v=1620837782393)"
+              ></div>
               <div class="card-body">
                 <h5 class="card-tittle">Pasteles</h5>
                 <p class="card-text">
@@ -90,11 +94,10 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
             <div class="card">
-              <img
-                src=" https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_sera-izgqkxumrhc-unsplash.jpg?v=1620837782393"
-                class="card-img-top"
-                alt="Dulces decoradas dentro de una vidriera"
-              />
+              <div
+                class="cover cover-small"
+                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_sera-izgqkxumrhc-unsplash.jpg?v=1620837782393)"
+              ></div>
               <div class="card-body">
                 <h5 class="card-tittle">Confiabilidad</h5>
                 <p class="card-text">
