--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
         <div class="row justify-content-center">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
             <div class="card">
-              <img
-                src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_diane-helentjaris-4mec6pzzam0-unsplash.jpg?v=1620583079835"
-                class="card-img-top"
-                alt="Persona amasando una masa en una mesa"
-              />
+              <div
+                class="cover cover-small" style="background-image:url(https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_diane-helentjaris-4mec6pzzam0-unsplash.jpg?v=1620583079835)"
+              ></div>
+    
               <div class="card-body">
                 <h5 class="card-tittle">Las mejores personas</h5>
                 <p class="card-text">
@@ -73,14 +72,9 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
             <div class="card">
-              <img
-                src=" https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_mick-haupt-5qqqkchcsay-unsplash.jpg?v=1620586378527"
-                class="card-img-top"
-                alt="Pastelitos dulces decoradas dentro de una cajita"
-              />
-               <div
-                class="cover cover-small"
-                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_sera-izgqkxumrhc-unsplash.jpg?v=1620837782393)"
+            
+               <div tittle
+                class="cover cover-small" style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_sera-izgqkxumrhc-unsplash.jpg?v=1620837782393)"
               ></div>
               <div class="card-body">
                 <h5 class="card-tittle">Pasteles</h5>
@@ -96,7 +90,7 @@
             <div class="card">
               <div
                 class="cover cover-small"
-                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_sera-izgqkxumrhc-unsplash.jpg?v=1620837782393)"
+                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_sera-izgqkxumrhc-unsplash.jpg?v=1620837782393 )"
               ></div>
               <div class="card-body">
                 <h5 class="card-tittle">Confiabilidad</h5>
