🎇🐣 Checkpoint ./index.html:31664997/822 ./style.css:31664997/144

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Kurale&display=swap" rel="stylesheet">
     
     <link
       href="https://fonts.googleapis.com/css2?family=Itim&display=swap"
@@ -103,6 +103,15 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section>
+      <div class="container mt-5 mb-5">
+        <form action="">
+          <input type="">
+          </input>
+          
+        </form>
       </div>
     </section>
   </body>
