👚💶 Checkpoint ./index.html:31664997/270

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
     <section>
       <div class="container mt-5 mb-5">
         <form action="">
+          <label for="email">Correo Electrónico</label>
           <div class="d-flex">
-            <div class="form-group">
-              <label for="email">Correo Electrónico</label>
+            <div class="flex-fill mr-2">
               <input type="email" id="Email" class="form-control" />
             </div>
-            <button>
-              
+            <button type="submit" class="btn btn-primary">
+              Enviar
             </button>
           </div>
         </form>
