🌇🗃 Checkpoint ./index.html:31664997/312

--- a/index.html
+++ b/index.html
@@ -125,9 +125,14 @@
           </div>
           
           <div class="col-12 col-sm-6">
-          <p>
+          <h3>
+            ¡Ven a probar y a disfrutar de nuestras delicias!
+            </h3>  
+            <p>
+              Ordena tu cajita de dulces a domicilio o busca tu RuthPastel más cercano
+            </p>
+            <a href="#"> Ir al mapa</a>
             
-            </p>  
           </div>
         </div>
         <form action="">
