🏞👙 Checkpoint ./.glitch-assets:31664997/3015 ./index.html:31664997/355

--- a/index.html
+++ b/index.html
@@ -115,8 +115,6 @@
     <section>
       <div class="container mt-5 mb-5">
         <div class="row">
-         <div class="container mt-5 mb-5">
-        <div class="row">
           <div class="col-12 col-sm-6 col-lg-5">
             <img
               src="https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2FIceCreamDoodle.svg?v=1620919947848 "
@@ -132,7 +130,6 @@
               Ordena tu cajita de dulces a domicilio o busca tu RuthPastel más cercano
             </p>
             <a href="#"> Ir al mapa</a>
-            
           </div>
         </div>
         <form action="">
@@ -148,6 +145,17 @@
           </div>
         </form>
       </div>
-    </section>
+    </section> 
+    <section>
+        <div class="container mt-5 mb-5">
+          <div>
+            <div>
+              <div>
+                
+              </div>
+            </div>
+          </div>
+      </div>
+  </section>
   </body>
 </html>
