--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <div
                 tittle="Pasteles decorados bajo la vitrina"
                 class="cover cover-small"
-                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_sera-izgqkxumrhc-unsplash.jpg?v=1620837782393)"
+                style="background-image:url( https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Fmahyar-motebassem-vQ2CgugPh6o-unsplash.jpg?v=1620593559372)"
               ></div>
               <div class="card-body">
                 <h5 class="card-tittle">Pasteles</h5>
@@ -171,7 +171,7 @@
               <div
                 tittle="Donas decoradas en una cajita"
                 class="cover cover-small"
-                style="background-image:url( https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_mick-haupt-5qqqkchcsay-unsplash.jpg?v=1620586378527)"
+                style="background-image:url( )"
               ></div>
               <div class="card-body">
                 <h5 class="card-tittle">Confiabilidad</h5>
@@ -186,7 +186,7 @@
               <div
                 tittle="Donas decoradas en una cajita"
                 class="cover cover-small"
-                style="background-image:url( https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_mick-haupt-5qqqkchcsay-unsplash.jpg?v=1620586378527)"
+                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_victor-rutka-4fujjkci40g-unsplash.jpg?v=1620922114361 )"
               ></div>
               <div class="card-body">
                 <h5 class="card-tittle">Confiabilidad</h5>
