😼🏏 Checkpoint ./.glitch-assets:31664997/479 ./index.html:31664997/1773

--- a/index.html
+++ b/index.html
@@ -149,66 +149,54 @@
     <section>
       <!---TIRA DE PRODUCTOS --->
       <div class="container mt-5 mb-5">
-        <div>
+        <div class
           <div>
             <div class="card">
               <div
-                tittle="Pasteles decorados bajo la vitrina"
+                tittle="Copa de cafe espresso"
                 class="cover cover-small"
                 style="background-image:url( https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_taisiia-shestopal-keread222jo-unsplash.jpg?v=1620922137165)"
               ></div>
               <div class="card-body">
-                <h5 class="card-tittle">Pasteles</h5>
-                <p class="card-text">
-                  En la pasteleria Ruth encontrarás mucha variedad de nuestros
-                  dulces clásicos en las cuales podras disfrutar con toda la
-                  comodidad.
-                </p>
+                <h5 class="card-tittle">Copa de Espresso</h5>
+                <span class="badge badge-info">10milGuaranies</span>
               </div>
             </div>
 
             <div class="card">
               <div
-                tittle="Donas decoradas en una cajita"
+                tittle="Pastel negro de chocolate amargo decoradas con frutos secos"
                 class="cover cover-small"
                 style="background-image:url( https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_gabriel-miklos-7ffw0piofjk-unsplash.jpg?v=1620924858301)"
               ></div>
               <div class="card-body">
-                <h5 class="card-tittle">Confiabilidad</h5>
-                <p class="card-text">
-                  Nuestros clientes son lo más importantes para nosotros , por
-                  eso le damos la mayor atención y cariño que se merecen recibir
-                </p>
+                <h5 class="card-tittle">Pastel chocolate amargo</h5>
+              <span class="badge badge-info">15MilGuaranies</span>
               </div>
             </div>
 
             <div class="card">
               <div
-                tittle="Donas decoradas en una cajita"
+                tittle="Dona y croissant en una bandeja"
                 class="cover cover-small"
                 style="background-image:url(https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Fmahyar-motebassem-vQ2CgugPh6o-unsplash.jpg?v=1620593559372 )"
               ></div>
               <div class="card-body">
-                <h5 class="card-tittle">Confiabilidad</h5>
-                <p class="card-text">
-                  Nuestros clientes son lo más importantes para nosotros , por
-                  eso le damos la mayor atención y cariño que se merecen recibir
-                </p>
+                <h5 class="card-tittle">Donas and croissant</h5>
+               <span class="badge badge-info">10MilGuaranies</span>
               </div>
             </div>
 
             <div class="card">
               <div
-                tittle="Donas decoradas en una cajita"
+                tittle="Pastel de frutas"
                 class="cover cover-small"
-                style="background-image:url( https://cdn.glitch.com/6db8ca25-c772-4212-a62b-19410518a076%2Frsz_mick-haupt-5qqqkchcsay-unsplash.jpg?v=1620586378527)"
+                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_henrik-hjortshoj-xtypjmtnqua-unsplash.jpg?v=1620925506719 )"
               ></div>
               <div class="card-body">
-                <h5 class="card-tittle">Confiabilidad</h5>
-                <p class="card-text">
-                  Nuestros clientes son lo más importantes para nosotros , por
-                  eso le damos la mayor atención y cariño que se merecen recibir
-                </p>
+                <h5 class="card-tittle">Pastel de Frutas</h5>
+              <span class="badge badge-info">15MilGuaranies</span>
+
               </div>
             </div>
           </div>
