🚞⛰ Checkpoint ./index.html:31664997/227 ./style.css:31664997/121

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     <section>
       <!---TIRA DE PRODUCTOS --->
       <div class="container mt-5 mb-5">
-        <div class
-          <div>
+        <div class="product-stripe">
+          <div class="stripe-container">
             <div class="card">
               <div
                 tittle="Copa de cafe espresso"
