⭐️🕴 Checkpoint ./index.html:31664997/1015 ./style.css:31664997/176

--- a/index.html
+++ b/index.html
@@ -208,7 +208,12 @@
       <h4>
         Aqui nos vemos:
       </h4>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7217.7795155041695!2d-57.55205132550339!3d-25.240637835504028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da6804db64b2b%3A0x2dff48e729b2856f!2sDe%20la%20Residenta%2C%20Asunci%C3%B3n!5e0!3m2!1ses-419!2spy!4v1620927273033!5m2!1ses-419!2spy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <p>
+        Asunción,Paraguay
+      </p>
+      <div class="responsive-iframe">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7217.7795155041695!2d-57.55205132550339!3d-25.240637835504028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da6804db64b2b%3A0x2dff48e729b2856f!2sDe%20la%20Residenta%2C%20Asunci%C3%B3n!5e0!3m2!1ses-419!2spy!4v1620927273033!5m2!1ses-419!2spy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
       
       </div>
     </section>
