--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
         <ul class="nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio </a>
+            <a class="nav-link" href="/">Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Ubicación </a>
+            <a class="nav-link" href="#mapa">Ubicación </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Acerca de </a>
+            <a class="nav-link" href="acercade.html">Acerca de </a>
           </li>
         </ul>
       </nav>
@@ -204,7 +204,7 @@
       </div>
     </section>
     <section>
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5 mb-5" id="mapa">
       <h4>
         Aqui nos vemos:
       </h4>
