🙏😄 Checkpoint ./acercade.html:31664997/972 ./index.html:31664997/204 ./.glitch-assets:31664997/508

--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@
           <li class="nav-item">
             <a class="nav-link" href="#mapa">Ubicación </a>
           </li>
+          
+            <li class="nav-item">
+            <a class="nav-link" href="#stripe">Menú</a>
+          </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="acercade.html">Acerca de </a>
           </li>
         </ul>
       </nav>
       <div
-        class="cover d-flex justify-content-center align-items-center flex-column"
+        class="cover d-flex justify-content-end align-items-start flex-column p-5"
       >
         <h1>
           Ruth Pastel
@@ -130,7 +135,7 @@
               Ordena tu cajita de dulces a domicilio o busca tu RuthPastel más
               cercano
             </p>
-            <a href="#"> Ir al mapa</a>
+            <a href="#mapa"> Ir al mapa</a>
           </div>
         </div>
         <form action="">
@@ -148,7 +153,7 @@
     </section>
     <section>
       <!---TIRA DE PRODUCTOS --->
-      <div class="container mt-5 mb-5">
+      <div class="container mt-5 mb-5" id="stripe">
         <div class="product-stripe">
           <div class="stripe-container">
             <div class="card">
