--- a/acercade.html
+++ b/acercade.html
@@ -31,13 +31,13 @@
 
         <ul class="nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio </a>
+            <a class="nav-link" href="/">Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Ubicación </a>
+            <a class="nav-link" href="#mapa">Ubicación </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Acerca de </a>
+            <a class="nav-link" href="acercade.html">Acerca de </a>
           </li>
         </ul>
       </nav>
