🌗❣️ Checkpoint ./index.html:31664997/25 ./acercade.html:31664997/12379

--- a/acercade.html
+++ b/acercade.html
@@ -42,7 +42,8 @@
         </ul>
       </nav>
       <div
-        class="cover d-flex justify-content-center align-items-center flex-column"
+        class="cover d-flex justify-content-end align-items-start p-5 flex-column"
+        style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_iwona-castiello-d-antonio-dnmldr814aa-unsplash.jpg?v=1620929477767)"
       >
         <h1>
           Ruth Pastel
@@ -56,5 +57,33 @@
         </button>
       </div>
     </header>
+    <section>
+      <div class="container mt-5 mb-5">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+          mattis turpis sed nunc finibus, in ullamcorper felis tincidunt. Aenean
+          molestie bibendum quam, vel mattis nisl tempus a. Mauris in ligula
+          leo. Phasellus mi odio, dictum in interdum quis, cursus in risus. Duis
+          ut erat et massa condimentum accumsan. Praesent vestibulum, mauris ac
+          aliquam lobortis, tortor est fermentum odio, ut ullamcorper elit dui
+          quis dolor. Proin ultricies accumsan nisl, eget elementum lorem
+          dignissim a. Curabitur arcu neque, ullamcorper id ligula vitae, ornare
+          vehicula tortor. Quisque id volutpat ante, vitae tincidunt quam.
+          Curabitur urna nunc, tempus nec nibh nec, consectetur gravida sapien.
+          Nullam nec hendrerit velit. Vestibulum ante ipsum primis in faucibus
+          orci luctus et ultrices posuere cubilia curae;
+        </p>
+        <p>
+          Morbi a ante sit amet est scelerisque finibus. In non neque sed quam
+          finibus porta sed eu ex. Nulla tempor purus sed cursus gravida. Nullam
+          id consectetur mi, vitae pretium orci. Mauris tincidunt, neque vitae
+          tristique dignissim, quam velit tincidunt elit, pharetra eleifend
+          tellus sem a purus. Aliquam pellentesque arcu euismod molestie
+          ultricies. Aenean in bibendum felis. Aenean mattis nisi at tempus
+          malesuada. Duis ut tincidunt ipsum. Etiam blandit ligula in luctus
+          consectetur.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
