--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </ul>
       </nav>
       <div
-        class="cover d-flex justify-content-end align-items-start flex-column p-5"
+        class="cover d-flex justify-content-center align-items-center flex-column "
       >
         <h1>
           Ruth Pastel
