😄💃 Checkpoint ./.glitch-assets:31664997/450 ./acercade.html:31664997/15193

--- a/acercade.html
+++ b/acercade.html
@@ -59,6 +59,10 @@
     </header>
     <section>
       <div class="container mt-5 mb-5">
+        <img
+        src="https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_710156e12d040fbf1e38e0c7bcd9456d.jpg?v=1620930506167"
+        alt="Pasteleria local" height:"250"
+        />
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
           mattis turpis sed nunc finibus, in ullamcorper felis tincidunt. Aenean
