🍉😜 Checkpoint ./.glitch-assets:31664997/465 ./acercade.html:31664997/8280

--- a/acercade.html
+++ b/acercade.html
@@ -60,8 +60,10 @@
     <section>
       <div class="container mt-5 mb-5">
         <img
-        src="https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_710156e12d040fbf1e38e0c7bcd9456d.jpg?v=1620930506167"
-        alt="Pasteleria local" height:"250"
+          src="https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_toa-heftiba-s1z_cudra0k-unsplash.jpg?v=1620931042760"
+          alt="pasteleria local con dulces en una mesa"
+          height="250"
+          class="float-right ml-4"
         />
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
