👯🍏 Checkpoint ./acercade.html:31664997/12355 ./style.css:31664997/125

--- a/acercade.html
+++ b/acercade.html
@@ -98,23 +98,43 @@
             <div
               class="image-container"
               style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Ftoa-heftiba-6mrvEQxRy3g-unsplash.jpg?v=1620932835757)"
-                 tittle="Señora viendo puesto de variedad de dulces"
+              tittle="Señora viendo puesto de variedad de dulces"
             ></div>
             <div
               class="image-container"
               style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Fvlad-b-YcR0WXmkQdw-unsplash.jpg?v=1620932849168)"
-                 tittle="Medialunas expuestos en una vidriera"
+              tittle="Medialunas expuestos en una vidriera"
             ></div>
             <div
               class="image-container"
               style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Fyeh-xintong-go3DT3PpIw4-unsplash.jpg?v=1620932855037)"
-                 tittle="Macarrones de diferentes colores en una mesa"
+              tittle="Macarrones de diferentes colores en una mesa"
             ></div>
             <div
               class="image-container"
               style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Fvered-caspi-P57G1wq8hi4-unsplash.jpg?v=1620932843353 )"
-                 tittle="Variedad de dulces siendo expuestos bajo una vidriera"
+              tittle="Variedad de dulces siendo expuestos bajo una vidriera"
             ></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container mt-5 mb-5">
+        <h2>
+          Conoce al equipo
+        </h2>
+        <p>
+          Somos el equipo que endulzan tus días
+        </p>
+        <div class="row">
+          <div class="col-12 col-sm-6 col-md-4 mt-2">
+            <div class="card p-4">
+              <div
+                class="avatar"
+                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Fthumb-tulio2.png?v=1620935718964 )"
+              ></div>
+            </div>
           </div>
         </div>
       </div>
