🏛🛰 Checkpoint ./acercade.html:31664997/683 ./.glitch-assets:31664997/1164 ./style.css:31664997/60

--- a/acercade.html
+++ b/acercade.html
@@ -129,10 +129,10 @@
         </p>
         <div class="row">
           <div class="col-12 col-sm-6 col-md-4 mt-2">
-            <div class="card p-4">
+            <div class="card p-4 text-center">
               <div
-                class="avatar"
-                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Fthumb-tulio2.png?v=1620935718964 )"
+                class="avatar rounded-circle inline-block"
+                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_policarpo_t2.png?v=1620936557679)"
               ></div>
             </div>
           </div>
