🌏😺 Checkpoint ./acercade.html:31664997/1728 ./.glitch-assets:31664997/399

--- a/acercade.html
+++ b/acercade.html
@@ -159,15 +159,40 @@
             <div class="card p-4 text-center">
               <div
                 class="avatar rounded-circle inline-block"
-                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_unnamed.jpg?v=1620936563768)"
+                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2FUnnamed_%25283%2529.jpg?v=1620935727609)"
               ></div>
               <h4 class="mt-2">
-                Juan carlos
+                Juan carlos Bodoque
               </h4>
-              <span class="badge badge-primary">Bartender</span>
+              <span class="badge badge-primary">CFO</span>
             </div>
           </div>
           
+          <div class="col-12 col-sm-6 col-md-4 mt-2">
+            <div class="card p-4 text-center">
+              <div
+                class="avatar rounded-circle inline-block"
+                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Fthumb-tulio2.png?v=1620935718964)"
+              ></div>
+              <h4 class="mt-2">
+                Tulio
+              </h4>
+              <span class="badge badge-primary">Mesero</span>
+            </div>
+          </div>
+          
+          <div class="col-12 col-sm-6 col-md-4 mt-2">
+            <div class="card p-4 text-center">
+              <div
+                class="avatar rounded-circle inline-block"
+                style="background-image:url(https://cdn.glitch.com/9139c0d5-4437-4050-acbb-7ce90f8b33be%2Frsz_raulguantecillo.png?v=1620937981037 )"
+              ></div>
+              <h4 class="mt-2">
+                Raúl Guantecillo
+              </h4>
+              <span class="badge badge-primary">Mesera</span>
+            </div>
+          </div>
         </div>
       </div>
     </section>
