🏉📡 Checkpoint ./acercade.html:31664997/14

--- a/acercade.html
+++ b/acercade.html
@@ -10,7 +10,6 @@
       href="https://fonts.googleapis.com/css2?family=Kurale&display=swap"
       rel="stylesheet"
     />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Itim&display=swap"
       rel="stylesheet"
@@ -27,7 +26,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">LOGO</a>
+        <a class="navbar-brand" href="#">Sweetfood</a>
 
         <ul class="nav">
           <li class="nav-item active">
